# oval-vs-round-chainring

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
dashboard/: Simulation.py
dashboard/pages/: 00_General_Theory.py
src/ovalchainring/: chainring_oval.py  pedalling_model.py
src/simulation/: chainrings_catalog.py  timing_vs_ovality_deadzone.py  torque_comparison.py  torque_vs_timing_ovality.py
